--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>PolyDash | Clone of Geometry Dash</title>
+    <title>PolyDash</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet preload prefetch" href="https://fonts.googleapis.com/css?family=Orbitron:700" as="style" type="text/css" crossorigin="anonymous">
 </head>
